--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,14 +27,16 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v4
-    - name: Set up Python 3.11
-      uses: actions/setup-python@v3
+    - name: Install uv
+      uses: astral-sh/setup-uv@v7
       with:
-        python-version: "3.11"
+        version: "0.9.13"
+    - name: Set up Python 3.11
+      run: uv python install 3.11
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -r ./holoplus_mocked_api/requirements.txt -c ./constraints.txt
+        cd ./holoplus_mocked_api
+        uv sync --locked --all-extras --dev
     - name: Setup Pages
       id: pages
       uses: actions/configure-pages@v5
@@ -42,7 +44,7 @@ jobs:
       run: |
         mkdir -p ./_site
         cd ./holoplus_mocked_api
-        python -m holoplus_mocked_api.build_redoc > ../_site/index.html
+        uv run python -m holoplus_mocked_api.build_redoc > ../_site/index.html
     - name: Upload artifact
       # Automatically uploads an artifact from the './_site' directory by default
       uses: actions/upload-pages-artifact@v3
